# mmapped.blog

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  about.html.pm  about.tex  dune  dune-project  feed.xml.pp  footer.tmpl  header.tmpl  index.html.pm  index.ptree  index.tex  library.bib  page.tmpl  pollen.rkt  post-list.tmpl  post.tmpl  posts.html.pm  template.html
blogware/test/: bib_test.ml  dune  elaborate_test.ml  feed_test.ml  highlight_test.ml  html_test.ml  layout_test.ml  math_test.ml  parser_test.ml  pipeline_test.ml  render_mathml_test.ml  render_test.ml  server_test.ml  snapshot_test.ml  stats_test.ml  strings_test.ml  syntax_go_test.ml  syntax_highlight_test.ml  test_main.ml  text_test.ml
blogware/test/snapshots/: about.html  feed.xml  index.html  posts.html
blogware/test/snapshots/notes/: ai.html  arrays.html  blockchain.html  books.html  dsa.html  expression-problem.html  glasperlenspiel.html  ic.html  icp.html  index.html  math.html  me.html  music.html  ocaml.html  programming.html  puzzles.html  quotes.html  rust.html  tagless-final.html  types.html
blogware/test/snapshots/posts/: 01-effective-rust-canisters.html  02-ic-state-machine-replication.html  03-rust-packages-crates-modules.html  04-square-joy-trapped-rain-water.html  05-debug-like-feynman.html  06-ic-orthogonal-persistence.html  07-square-joy-pre-order.html  08-ic-xnet.html  09-fungible-tokens-101.html  10-payment-flows.html  11-ii-stable-memory.html  12-rust-error-handling.html  13-icp-ledger.html  14-stable-structures.html  15-when-rust-hurts.html  (+36 more)
(+170 files in other folders)
